@@ -62,7 +62,6 @@ import uk.gov.justice.laa.dstew.access.model.AutoGrantOutcome;
 import uk.gov.justice.laa.dstew.access.model.AutoGranted;
 import uk.gov.justice.laa.dstew.access.model.AutoGrantedOutcomeRequest;
 import uk.gov.justice.laa.dstew.access.model.BillingType;
-import uk.gov.justice.laa.dstew.access.model.CaseworkerAssignRequest;
 import uk.gov.justice.laa.dstew.access.model.CaseworkerUnassignRequest;
 import uk.gov.justice.laa.dstew.access.model.CategoryOfLaw;
 import uk.gov.justice.laa.dstew.access.model.CreateNoteRequest;
@@ -84,6 +83,7 @@ import uk.gov.justice.laa.dstew.access.model.PriorAuthorityType;
 import uk.gov.justice.laa.dstew.access.model.ProviderResponse;
 import uk.gov.justice.laa.dstew.access.model.ScopeLimitationResponse;
 import uk.gov.justice.laa.dstew.access.model.WorkListAssignRequest;
+import uk.gov.justice.laa.dstew.access.model.WorkListUnassignRequest;
 import uk.gov.justice.laa.dstew.access.query.application.ApplicationReadModel;
 import uk.gov.justice.laa.dstew.access.query.application.ApplicationReadRepository;
 import uk.gov.justice.laa.dstew.access.query.application.FindApplicationByIdQuery;
@@ -193,7 +193,6 @@ class PostgresAxonIntegrationTest {
             "application_data",
             "application_history",
             "application_list_index",
-            "caseworkers",
             "domain_event_entry",
             "flyway_schema_history",
             "linked_application_group_current_state",
@@ -468,13 +467,12 @@ class PostgresAxonIntegrationTest {
     applicationId(post(validCreateApplicationRequest(applicationId, applyProceedingId), headers()));
     ApplicationReadModel created = awaitProjection(applicationId);
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
+    assignForManualDecision(applicationId);
     UUID proceedingId = created.getProceedings().getFirst().getId();
 
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.REFUSED)
             .eventHistory(
                 EventHistoryRequest.builder().eventDescription("Decision recorded").build())
@@ -652,7 +650,7 @@ class PostgresAxonIntegrationTest {
     UUID applyProceedingId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, applyProceedingId), headers()));
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
+    assignForManualDecision(applicationId);
     UUID proceedingId = awaitProjection(applicationId).getProceedings().getFirst().getId();
     Map<String, Object> certificate =
         Map.of(
@@ -662,7 +660,6 @@ class PostgresAxonIntegrationTest {
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.GRANTED)
             .certificate(certificate)
             .eventHistory(
@@ -734,150 +731,8 @@ class PostgresAxonIntegrationTest {
         .contains("No application found with ID: " + missingApplicationId);
   }
 
-  void givenKnownCaseworkerAndApplication_whenAssigned_thenUpdatesOnlyRequestedApplication()
-      throws Exception {
-    UUID caseworkerId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)",
-        caseworkerId,
-        "caseworker@example.com");
-    UUID firstApplicationId = UUID.randomUUID();
-    UUID secondApplicationId = UUID.randomUUID();
-    applicationId(
-        post(validCreateApplicationRequest(firstApplicationId, UUID.randomUUID()), headers()));
-    applicationId(
-        post(validCreateApplicationRequest(secondApplicationId, UUID.randomUUID()), headers()));
-    awaitProjection(firstApplicationId);
-    awaitProjection(secondApplicationId);
-
-    CaseworkerAssignRequest request =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(firstApplicationId))
-            .eventHistory(
-                EventHistoryRequest.builder().eventDescription("Assigned for assessment").build())
-            .build();
-    ResponseEntity<Void> response =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(request, headers()),
-            Void.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjectionVersion(firstApplicationId, 1L).getCaseworkerId())
-        .isEqualTo(caseworkerId);
-    assertThat(awaitProjection(secondApplicationId).getCaseworkerId()).isNull();
-    assertThat(awaitGet(firstApplicationId).getBody().getAssignedTo()).isEqualTo(caseworkerId);
-    assertThat(
-            jdbcTemplate.queryForObject(
-                "SELECT convert_from(payload, 'UTF8') FROM axon.domain_event_entry "
-                    + "WHERE aggregate_identifier = ? AND sequence_number = 1",
-                String.class,
-                firstApplicationId.toString()))
-        .contains("caseworkerId", caseworkerId.toString())
-        .doesNotContain("Assigned for assessment");
-
-    ResponseEntity<ApplicationHistoryResponse> historyResponse =
-        restTemplate.exchange(
-            "http://localhost:"
-                + port
-                + "/api/v0/applications/"
-                + firstApplicationId
-                + "/history-search?eventType=ASSIGN_APPLICATION_TO_CASEWORKER",
-            HttpMethod.GET,
-            new HttpEntity<>(headers()),
-            ApplicationHistoryResponse.class);
-    assertThat(historyResponse.getBody().getEvents())
-        .singleElement()
-        .satisfies(
-            event -> {
-              assertThat(event.getCaseworkerId()).isEqualTo(caseworkerId);
-              assertThat(event.getEventDescription()).isEqualTo("Assigned for assessment");
-            });
-
-    CaseworkerUnassignRequest unassignRequest =
-        CaseworkerUnassignRequest.builder()
-            .eventHistory(
-                EventHistoryRequest.builder().eventDescription("Returned to queue").build())
-            .build();
-    ResponseEntity<Void> unassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + firstApplicationId + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(unassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjectionVersion(firstApplicationId, 2L).getCaseworkerId()).isNull();
-    assertThat(awaitGet(firstApplicationId).getBody().getAssignedTo()).isNull();
-    assertThat(
-            jdbcTemplate.queryForObject(
-                "SELECT convert_from(payload, 'UTF8') FROM axon.domain_event_entry "
-                    + "WHERE aggregate_identifier = ? AND sequence_number = 2",
-                String.class,
-                firstApplicationId.toString()))
-        .doesNotContain("Returned to queue");
-
-    ResponseEntity<ApplicationHistoryResponse> unassignHistoryResponse =
-        restTemplate.exchange(
-            "http://localhost:"
-                + port
-                + "/api/v0/applications/"
-                + firstApplicationId
-                + "/history-search?eventType=UNASSIGN_APPLICATION_TO_CASEWORKER",
-            HttpMethod.GET,
-            new HttpEntity<>(headers()),
-            ApplicationHistoryResponse.class);
-    assertThat(unassignHistoryResponse.getBody().getEvents())
-        .singleElement()
-        .satisfies(
-            event -> {
-              assertThat(event.getCaseworkerId()).isNull();
-              assertThat(event.getEventDescription()).isEqualTo("Returned to queue");
-            });
-
-    ResponseEntity<Void> repeatedUnassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + firstApplicationId + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(repeatedUnassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(awaitProjection(firstApplicationId).getApplicationVersion()).isEqualTo(2L);
-
-    CaseworkerAssignRequest multipleApplicationsRequest =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(firstApplicationId, secondApplicationId))
-            .build();
-    ResponseEntity<Void> listResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(multipleApplicationsRequest, headers()),
-            Void.class);
-    assertThat(listResponse.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-
-    CaseworkerAssignRequest missingApplicationRequest =
-        CaseworkerAssignRequest.builder()
-            .caseworkerId(caseworkerId)
-            .applicationIds(List.of(UUID.randomUUID()))
-            .build();
-    ResponseEntity<Void> missingResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/assign",
-            new HttpEntity<>(missingApplicationRequest, headers()),
-            Void.class);
-    assertThat(missingResponse.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-
-    ResponseEntity<Void> missingUnassignResponse =
-        restTemplate.postForEntity(
-            "http://localhost:" + port + "/api/v0/applications/" + UUID.randomUUID() + "/unassign",
-            new HttpEntity<>(unassignRequest, headers()),
-            Void.class);
-    assertThat(missingUnassignResponse.getStatusCode()).isEqualTo(HttpStatus.NOT_FOUND);
-    assertThat(awaitProjection(secondApplicationId).getApplicationVersion()).isZero();
-  }
-
   @Test
-  void givenCreatedApplication_whenGetApplication_thenReturnsCurrentStateProjection()
-      throws Exception {
+  void givenCreatedApplication_whenGetApplication_thenReturnsCurrentStateProjection() {
     UUID applicationId = UUID.randomUUID();
     UUID applyProceedingId = UUID.randomUUID();
     final UUID involvedChildId = UUID.randomUUID();
@@ -987,8 +842,7 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenIdenticalRetry_whenPostApplicationAgain_thenReturnsCreatedIdempotently()
-      throws Exception {
+  void givenIdenticalRetry_whenPostApplicationAgain_thenReturnsCreatedIdempotently() {
     UUID applicationId = UUID.randomUUID();
     HttpEntity<ApplicationCreateRequest> request =
         new HttpEntity<>(
@@ -1042,8 +896,7 @@ class PostgresAxonIntegrationTest {
 
   @Test
   @Disabled("Linked applications removed from schema; orchestration retained for future endpoint")
-  void givenExistingLeadApplication_whenPostLinkedApplication_thenProjectsCurrentStateAndHistory()
-      throws Exception {
+  void givenExistingLeadApplication_whenPostLinkedApplication_thenProjectsCurrentStateAndHistory() {
     UUID leadApplicationId = UUID.randomUUID();
     ResponseEntity<Void> leadResponse =
         post(validCreateApplicationRequest(leadApplicationId, UUID.randomUUID()), headers());
@@ -1095,8 +948,7 @@ class PostgresAxonIntegrationTest {
 
   @Test
   @Disabled("Linked applications removed from schema; orchestration retained for future endpoint")
-  void givenMissingAssociatedApplication_whenPostApplication_thenReturnsNotFound()
-      throws Exception {
+  void givenMissingAssociatedApplication_whenPostApplication_thenReturnsNotFound() {
     UUID leadApplicationId = UUID.randomUUID();
     UUID createdLeadApplicationId =
         applicationId(
@@ -1279,12 +1131,11 @@ class PostgresAxonIntegrationTest {
     UUID applicationId = UUID.randomUUID();
     applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
     markReadyForManualDecision(applicationId);
-    UUID caseworkerId = assignForManualDecision(applicationId);
+    assignForManualDecision(applicationId);
     UUID proceedingId = awaitProjection(applicationId).getProceedings().getFirst().getId();
     MakeDecisionRequest request =
         MakeDecisionRequest.builder()
             .applicationVersion(1L)
-            .caseworkerId(caseworkerId)
             .overallDecision(DecisionStatus.REFUSED)
             .eventHistory(EventHistoryRequest.builder().eventDescription("Concurrent").build())
             .proceedings(
@@ -1376,7 +1227,7 @@ class PostgresAxonIntegrationTest {
         .isEqualTo(2);
   }
 
-  private void markReadyForManualDecision(UUID applicationId) throws Exception {
+  private void markReadyForManualDecision(UUID applicationId) {
     ResponseEntity<Void> response =
         restTemplate.exchange(
             "http://localhost:"
@@ -1393,16 +1244,12 @@ class PostgresAxonIntegrationTest {
   }
 
   private UUID assignForManualDecision(UUID applicationId) {
-    UUID caseworkerId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)",
-        caseworkerId,
-        "decision-" + caseworkerId + "@example.com");
+    UUID caseworkerId = TestJwtDecoderConfig.CASEWORKER_ID;
     ResponseEntity<Void> response =
         restTemplate.exchange(
             "http://localhost:" + port + "/api/v0/work-list/" + applicationId + "/assign",
             HttpMethod.POST,
-            new HttpEntity<>(new WorkListAssignRequest(caseworkerId, 0L), headers()),
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
             Void.class);
 
     assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
@@ -1425,50 +1272,9 @@ class PostgresAxonIntegrationTest {
   }
 
   @Test
-  void givenSeededCaseworkers_whenGetCaseworkers_thenReturnsAllCaseworkers() {
-    UUID firstId = UUID.randomUUID();
-    UUID secondId = UUID.randomUUID();
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)", firstId, "alice@example.com");
-    jdbcTemplate.update(
-        "INSERT INTO axon.caseworkers (id, username) VALUES (?, ?)", secondId, "bob@example.com");
-
-    HttpHeaders headers = new HttpHeaders();
-    headers.set("X-Service-Name", "CIVIL_APPLY");
-    headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
-    ResponseEntity<List<Map<String, Object>>> response =
-        restTemplate.exchange(
-            "http://localhost:" + port + "/api/v0/caseworkers",
-            HttpMethod.GET,
-            new HttpEntity<>(headers),
-            new ParameterizedTypeReference<>() {});
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.OK);
-    assertThat(response.getBody())
-        .extracting(item -> item.get("username"))
-        .contains("alice@example.com", "bob@example.com");
-  }
-
-  @Test
-  void givenMissingServiceNameHeader_whenGetCaseworkers_thenReturnsBadRequest() {
-    HttpHeaders headers = new HttpHeaders();
-    headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
-    // Intentionally omit X-Service-Name to test validation
-    ResponseEntity<String> response =
-        restTemplate.exchange(
-            "http://localhost:" + port + "/api/v0/caseworkers",
-            HttpMethod.GET,
-            new HttpEntity<>(headers),
-            String.class);
-
-    assertThat(response.getStatusCode()).isEqualTo(HttpStatus.BAD_REQUEST);
-  }
-
-  @Test
   void givenNoToken_whenCallingSecuredEndpoints_thenReturnsUnauthorized() {
     UUID applicationId = UUID.randomUUID();
 
-    assertUnauthorized(HttpMethod.GET, "/api/v0/caseworkers", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/applications", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/individuals", null);
     assertUnauthorized(HttpMethod.GET, "/api/v0/applications/" + applicationId, null);
@@ -1493,7 +1299,6 @@ class PostgresAxonIntegrationTest {
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/notes",
         new CreateNoteRequest("note"));
-    assertUnauthorized(HttpMethod.POST, "/api/v0/applications/assign", assignRequestBody());
     assertUnauthorized(
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/unassign",
@@ -1503,8 +1308,6 @@ class PostgresAxonIntegrationTest {
   @Test
   void givenUnknownToken_whenCallingSecuredEndpoints_thenReturnsForbidden() {
     UUID applicationId = UUID.randomUUID();
-
-    assertForbidden(HttpMethod.GET, "/api/v0/caseworkers", null);
     assertForbidden(HttpMethod.GET, "/api/v0/applications", null);
     assertForbidden(HttpMethod.GET, "/api/v0/individuals", null);
     assertForbidden(HttpMethod.GET, "/api/v0/applications/" + applicationId, null);
@@ -1528,7 +1331,6 @@ class PostgresAxonIntegrationTest {
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/notes",
         new CreateNoteRequest("note"));
-    assertForbidden(HttpMethod.POST, "/api/v0/applications/assign", assignRequestBody());
     assertForbidden(
         HttpMethod.POST,
         "/api/v0/applications/" + applicationId + "/unassign",
@@ -1544,7 +1346,6 @@ class PostgresAxonIntegrationTest {
   private MakeDecisionRequest decisionBody() {
     return MakeDecisionRequest.builder()
         .applicationVersion(0L)
-        .caseworkerId(UUID.randomUUID())
         .overallDecision(DecisionStatus.REFUSED)
         .autoGranted(false)
         .eventHistory(EventHistoryRequest.builder().eventDescription("decision").build())
@@ -1564,13 +1365,6 @@ class PostgresAxonIntegrationTest {
 
   private ManualOutcomeRequest autoGrantOutcomeBody() {
     return new ManualOutcomeRequest(AutoGrantOutcome.MANUAL);
-  }
-
-  private CaseworkerAssignRequest assignRequestBody() {
-    return new CaseworkerAssignRequest()
-        .caseworkerId(UUID.randomUUID())
-        .applicationIds(List.of(UUID.randomUUID()))
-        .eventHistory(EventHistoryRequest.builder().eventDescription("assign").build());
   }
 
   private CaseworkerUnassignRequest unassignRequestBody() {
@@ -1788,8 +1582,440 @@ class PostgresAxonIntegrationTest {
     assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
     assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
     assertThat(group.getEvents()).hasSize(1);
-    assertThat(group.getEvents().get(0).getEventType()).isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
+    assertThat(group.getEvents().getFirst().getEventType()).isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
+    assertThat(group.getEvents().getFirst().getCaseworkerId())
+        .isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID);
     assertThat(historyResponse.getBody().getEvents()).isNotEmpty();
+  }
+
+  @Test
+  void
+      givenSubmittedPriorAuthorityAssignedToCaseworker_whenGetHistory_thenIncludesAssignmentEvent() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    awaitProjection(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-002")),
+            headers()),
+        Void.class);
+    awaitProjectionVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 2);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(2);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder("PRIOR_AUTHORITY_SUBMITTED", "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .extracting(event -> event.getCaseworkerId())
+        .allSatisfy(
+            caseworkerId -> assertThat(caseworkerId).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+  }
+
+  @Test
+  void
+      givenAssignedPriorAuthorityUnassignedFromCaseworker_whenGetHistory_thenIncludesUnassignmentEvent() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    awaitProjection(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-003")),
+            headers()),
+        Void.class);
+    awaitProjectionVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> unassignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/unassign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListUnassignRequest(1L), headers()),
+            Void.class);
+    assertThat(unassignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 3);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().getFirst();
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(3);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder(
+            "PRIOR_AUTHORITY_SUBMITTED",
+            "UNASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_SUBMITTED"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("ASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("UNASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+  }
+
+  @Test
+  void
+      givenSubmittedPriorAuthorityReassignedToDifferentCaseworker_whenGetHistory_thenIncludesAllAssignmentEvents() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    awaitProjection(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-004")),
+            headers()),
+        Void.class);
+    awaitProjectionVersion(applicationId, 1L);
+
+    ResponseEntity<String> paResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(paResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID priorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(paResponse.getBody()).get("priorAuthorityId").asText());
+
+    ResponseEntity<String> submitResponse =
+        restTemplate.postForEntity(
+            "http://localhost:"
+                + port
+                + "/api/v0/prior-authorities/"
+                + priorAuthorityId
+                + "/submit",
+            new HttpEntity<>(null, headers()),
+            String.class);
+    assertThat(submitResponse.getStatusCode()).isIn(HttpStatus.OK, HttpStatus.ACCEPTED);
+
+    ResponseEntity<Void> firstAssign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(
+                new WorkListAssignRequest(0L), headers(TestJwtDecoderConfig.BEARER_TOKEN)),
+            Void.class);
+    assertThat(firstAssign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> unassign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/unassign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListUnassignRequest(1L), headers()),
+            Void.class);
+    assertThat(unassign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    ResponseEntity<Void> secondAssign =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + priorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(
+                new WorkListAssignRequest(2L), headers(TestJwtDecoderConfig.OTHER_BEARER_TOKEN)),
+            Void.class);
+    assertThat(secondAssign.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 4);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents()).hasSize(4);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder(
+            "PRIOR_AUTHORITY_SUBMITTED",
+            "UNASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER",
+            "ASSIGN_APPLICATION_TO_CASEWORKER");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_SUBMITTED"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("UNASSIGN_APPLICATION_TO_CASEWORKER"))
+        .singleElement()
+        .satisfies(
+            event ->
+                assertThat(event.getCaseworkerId()).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("ASSIGN_APPLICATION_TO_CASEWORKER"))
+        .hasSize(2)
+        .allSatisfy(event -> assertThat(event.getCaseworkerId()).isNotNull());
+  }
+
+  @Test
+  void
+      givenMultiplePriorAuthoritiesWithOneAssigned_whenGetHistory_thenAssignmentEventAttachedToCorrectGroup() {
+    UUID applicationId = UUID.randomUUID();
+    applicationId(post(validCreateApplicationRequest(applicationId, UUID.randomUUID()), headers()));
+    awaitProjection(applicationId);
+
+    restTemplate.exchange(
+        "http://localhost:"
+            + port
+            + "/api/v0/applications/"
+            + applicationId
+            + "/auto-grant-outcome",
+        HttpMethod.PATCH,
+        new HttpEntity<>(
+            new AutoGrantedOutcomeRequest(
+                AutoGrantOutcome.AUTOGRANTED, Map.of("certificateNumber", "PA-CERT-005")),
+            headers()),
+        Void.class);
+    awaitProjectionVersion(applicationId, 1L);
+
+    ResponseEntity<String> firstPaResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(firstPaResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID firstPriorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(firstPaResponse.getBody()).get("priorAuthorityId").asText());
+    restTemplate.postForEntity(
+        "http://localhost:"
+            + port
+            + "/api/v0/prior-authorities/"
+            + firstPriorAuthorityId
+            + "/submit",
+        new HttpEntity<>(null, headers()),
+        String.class);
+
+    ResponseEntity<String> secondPaResponse =
+        restTemplate.postForEntity(
+            "http://localhost:" + port + "/api/v0/prior-authorities",
+            new HttpEntity<>(fixedRateExpertDraftRequest(applicationId), headers()),
+            String.class);
+    assertThat(secondPaResponse.getStatusCode()).isIn(HttpStatus.CREATED, HttpStatus.ACCEPTED);
+    UUID secondPriorAuthorityId =
+        UUID.fromString(
+            objectMapper.readTree(secondPaResponse.getBody()).get("priorAuthorityId").asText());
+    restTemplate.postForEntity(
+        "http://localhost:"
+            + port
+            + "/api/v0/prior-authorities/"
+            + secondPriorAuthorityId
+            + "/submit",
+        new HttpEntity<>(null, headers()),
+        String.class);
+
+    ResponseEntity<Void> assignResponse =
+        restTemplate.exchange(
+            "http://localhost:" + port + "/api/v0/work-list/" + secondPriorAuthorityId + "/assign",
+            HttpMethod.POST,
+            new HttpEntity<>(new WorkListAssignRequest(0L), headers()),
+            Void.class);
+    assertThat(assignResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    await()
+        .atMost(10, TimeUnit.SECONDS)
+        .pollInterval(50, TimeUnit.MILLISECONDS)
+        .until(
+            () ->
+                priorAuthorityHistoryReadRepository.findAllByApplicationIdOrderByOccurredAtAsc(
+                    applicationId),
+            rows -> rows.size() == 3);
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(2);
+
+    PriorAuthorityHistoryGroup assignedGroup =
+        historyResponse.getBody().getPriorAuthorities().stream()
+            .filter(g -> g.getPriorAuthorityId().equals(secondPriorAuthorityId))
+            .findFirst()
+            .orElseThrow();
+    assertThat(assignedGroup.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(assignedGroup.getEvents()).hasSize(2);
+    assertThat(assignedGroup.getEvents())
+        .extracting(event -> event.getEventType())
+        .containsExactlyInAnyOrder("PRIOR_AUTHORITY_SUBMITTED", "ASSIGN_APPLICATION_TO_CASEWORKER");
+
+    assertThat(assignedGroup.getEvents())
+        .extracting(event -> event.getCaseworkerId())
+        .allSatisfy(
+            caseworkerId -> assertThat(caseworkerId).isEqualTo(TestJwtDecoderConfig.CASEWORKER_ID));
+
+    PriorAuthorityHistoryGroup untouchedGroup =
+        historyResponse.getBody().getPriorAuthorities().stream()
+            .filter(g -> g.getPriorAuthorityId().equals(firstPriorAuthorityId))
+            .findFirst()
+            .orElseThrow();
+    assertThat(untouchedGroup.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(untouchedGroup.getEvents()).hasSize(1);
+    assertThat(untouchedGroup.getEvents().getFirst().getEventType())
+        .isEqualTo("PRIOR_AUTHORITY_SUBMITTED");
   }
 
   @Test
@@ -1802,15 +2028,15 @@ class PostgresAxonIntegrationTest {
         """
         INSERT INTO axon.prior_authority_history
             (event_id, application_id, prior_authority_id, prior_authority_type,
-             event_type, event_data, service_name, occurred_at)
-        VALUES (?, ?, ?, ?, ?, ?::jsonb, ?, ?)
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
         """,
         "conflict-evt-1",
         applicationId,
         priorAuthorityId,
         "EXPERT",
         "PRIOR_AUTHORITY_SUBMITTED",
-        "{\"status\":\"PENDING\",\"dataVersion\":0}",
+        2L,
         "CIVIL_APPLY",
         OffsetDateTime.parse("2026-08-01T09:00:00Z"));
 
@@ -1818,15 +2044,15 @@ class PostgresAxonIntegrationTest {
         """
         INSERT INTO axon.prior_authority_history
             (event_id, application_id, prior_authority_id, prior_authority_type,
-             event_type, event_data, service_name, occurred_at)
-        VALUES (?, ?, ?, ?, ?, ?::jsonb, ?, ?)
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
         """,
         "conflict-evt-2",
         applicationId,
         priorAuthorityId,
         "COUNSEL",
         "PRIOR_AUTHORITY_SUBMITTED",
-        "{\"status\":\"PENDING\",\"dataVersion\":0}",
+        2L,
         "CIVIL_APPLY",
         OffsetDateTime.parse("2026-08-01T10:00:00Z"));
 
@@ -1858,6 +2084,69 @@ class PostgresAxonIntegrationTest {
     }
   }
 
+  @Test
+  void
+      givenSubmittedPriorAuthorityWithUploadedDocument_whenGetHistory_thenIncludesDocumentUploadedEvent() {
+    UUID applicationId = UUID.randomUUID();
+    UUID priorAuthorityId = UUID.randomUUID();
+
+    jdbcTemplate.update(
+        """
+        INSERT INTO axon.prior_authority_history
+            (event_id, application_id, prior_authority_id, prior_authority_type,
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+        """,
+        "pa-submit-evt-1",
+        applicationId,
+        priorAuthorityId,
+        "EXPERT",
+        "PRIOR_AUTHORITY_SUBMITTED",
+        2L,
+        "CIVIL_APPLY",
+        OffsetDateTime.parse("2026-09-18T10:00:00Z"));
+
+    jdbcTemplate.update(
+        """
+        INSERT INTO axon.prior_authority_history
+            (event_id, application_id, prior_authority_id, prior_authority_type,
+             event_type, item_version, service_name, occurred_at)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+        """,
+        "pa-upload-evt-1",
+        applicationId,
+        priorAuthorityId,
+        "EXPERT",
+        "PRIOR_AUTHORITY_DOCUMENT_UPLOADED",
+        2L,
+        "CIVIL_APPLY",
+        OffsetDateTime.parse("2026-09-18T11:00:00Z"));
+
+    ResponseEntity<ApplicationHistoryResponse> historyResponse =
+        restTemplate.exchange(
+            "http://localhost:"
+                + port
+                + "/api/v0/applications/"
+                + applicationId
+                + "/history-search",
+            HttpMethod.GET,
+            new HttpEntity<>(headers()),
+            ApplicationHistoryResponse.class);
+    assertThat(historyResponse.getStatusCode()).isEqualTo(HttpStatus.OK);
+
+    assertThat(historyResponse.getBody().getPriorAuthorities()).hasSize(1);
+    PriorAuthorityHistoryGroup group = historyResponse.getBody().getPriorAuthorities().get(0);
+    assertThat(group.getPriorAuthorityId()).isEqualTo(priorAuthorityId);
+    assertThat(group.getPriorAuthorityType()).isEqualTo(PriorAuthorityType.EXPERT);
+    assertThat(group.getEvents())
+        .extracting(event -> event.getEventType())
+        .contains("PRIOR_AUTHORITY_SUBMITTED", "PRIOR_AUTHORITY_DOCUMENT_UPLOADED");
+    assertThat(group.getEvents())
+        .filteredOn(event -> event.getEventType().equals("PRIOR_AUTHORITY_DOCUMENT_UPLOADED"))
+        .singleElement()
+        .satisfies(event -> assertThat(event.getCaseworkerId()).isNull());
+  }
+
   private CreatePriorAuthorityDraftRequest fixedRateExpertDraftRequest(UUID applicationId) {
     return CreatePriorAuthorityDraftRequest.builder()
         .applicationId(applicationId)
@@ -1882,11 +2171,23 @@ class PostgresAxonIntegrationTest {
     return headers(1);
   }
 
+  private HttpHeaders headers(String bearerToken) {
+    return headers(1, bearerToken);
+  }
+
   private HttpHeaders headers(int schemaVersion) {
     HttpHeaders headers = new HttpHeaders();
     headers.set("X-Service-Name", "CIVIL_APPLY");
     headers.set("X-Schema-Version", String.valueOf(schemaVersion));
     headers.setBearerAuth(TestJwtDecoderConfig.BEARER_TOKEN);
+    return headers;
+  }
+
+  private HttpHeaders headers(int schemaVersion, String bearerAuthToken) {
+    HttpHeaders headers = new HttpHeaders();
+    headers.set("X-Service-Name", "CIVIL_APPLY");
+    headers.set("X-Schema-Version", String.valueOf(schemaVersion));
+    headers.setBearerAuth(bearerAuthToken);
     return headers;
   }
 
@@ -1917,7 +2218,7 @@ class PostgresAxonIntegrationTest {
     return proceeding;
   }
 
-  private ResponseEntity<ApplicationResponse> awaitGet(UUID applicationId) throws Exception {
+  private ResponseEntity<ApplicationResponse> awaitGet(UUID applicationId) {
     ResponseEntity<String> response =
         await()
             .alias("application to be available from the query projection: " + applicationId)
@@ -1963,9 +2264,7 @@ class PostgresAxonIntegrationTest {
             projected -> projected != null && projected.getApplicationDataVersion() == version);
   }
 
-  private java.util.List<
-          uk.gov.justice.laa.dstew.access.query.application.history.ApplicationHistoryReadModel>
-      awaitHistory(UUID applicationId, int expectedCount) {
+  private List<ApplicationHistoryReadModel> awaitHistory(UUID applicationId, int expectedCount) {
     return await()
         .alias(
             "application history projection to contain "
